app/css/main.css
/* ... */
#settings .about:hover {
    opacity: .9;
}

#settings .setting {
    width: 50%;
    margin: 20px auto;
    overflow-y: hidden;
    border-bottom-style: solid;
    border-bottom-width: 1px;
}

#settings .title {
    font-size: 18px;
    margin-left: -150px;
    max-width: 150px;
    padding-right: 10px;
    line-height: 20px;
    padding-top: 20px;
    vertical-align: middle;
    position: absolute;
}

#settings .option {
    height: 60px;
}

#settings .text {
    display: inline;
    line-height: 60px;
    float: left;
}

#settings .text.secondary {
    padding-left: 10px;
    opacity: 0.8;
}

#settings .action {
    display: inline;
    line-height: 60px;
    float: right;
    font-size: 14px;
}

#settings .action button,
#details-next .content button {
    height: 40px;
    line-height: 40px;
    width: 150px;
    border: 0px;
    border-radius: 5px;
    transition: all .3s
}

#details-next .content button {
    margin-top: 10px;
    margin-left: 20px;
}

#settings .locals .option.localbox {
    height: 160px;
}

#settings .locals .option .pathbox {
    height: 150px;
    position: relative;
}

#settings .locals .option .pathbox .paths {
    height: 100px;
    width: 304px;
    border-radius: 5px;
    overflow-x: hidden;
    overflow-y: scroll;
}

#settings .locals .option .pathbox .paths li {
    list-style: none;
    font-size: 12px;
    font-family: monospace;
    padding: 5px 15px;
    line-height: 25px;
    cursor: pointer;
}

#hidden-input-local {
    display: none;
}

#settings label {
    margin-bottom: -5px;
}

#settings .mpv #mpvpath {
    display: none;
}

#settings .mpv input {
    cursor: pointer;
    height: 30px;
    padding: 10px;
    text-align: center;
    width: 150px;
    font-family: monospace;
    font-size: 12px;
}

#settings .mpv #fakempvpath {
    width: 220px;
}

#settings input[type='color'] {
    -webkit-appearance: none;
    padding: 0 10px 0 20px;
}

#settings input[type='color']::-webkit-color-swatch {
    margin: 3px -9px 3px -3px;
}


/* Settings END */

/* slider */

.switch {
    position: relative;
    display: inline-block;
    width: 45px;
    height: 20px;
}

.switch input {
    display: none;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    -webkit-transition: .4s;
    transition: .4s;
}

.slider:before {
    position: absolute;
    content: '';
    height: 16px;
    width: 16px;
    left: 3px;
    bottom: 2px;
    -webkit-transition: .4s;
    transition: .4s;
}

input:checked + .slider:before {
    transform: translateX(23px);
}

.slider.round {
    border-radius: 34px;
}

.slider.round:before {
    border-radius: 50%;
}


/* slider END */

/* details */

#details {
    position: fixed;
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    z-index: 3;
}

#details .background {
    transition: all 1s;
    width: 100%;
    height: 100%;
    background-image: url(../images/placeholder.png);
    opacity: 0;
    background-size: cover;
    position: absolute;
    z-index: 3;
}

#details .container {
    width: 100%;
    height: 100%;
    padding: 0;
    position: absolute;
    z-index: 4;
}

#details .data {
    display: none;
}

#details #details-back {
    font-size: 30px;
    position: absolute;
    padding: 38px 2%;
    transition: all .3s;
    cursor: pointer;
}

#details #details-metadata {
    width: 85%;
    margin: 0 auto;
    padding: 25px 0px;
    height: 350px;
}

#details-metadata .ids {
    display: none;
}

#details-metadata .title {
    font-size: 45px;
    line-height: 64px;
    text-shadow: 2px 1px 10px rgba(11, 11, 11, .5);
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

#details-metadata .ep-title {
    position: absolute;
    top: 10px;
}

#details-metadata .md-box {
    width: 100%;
    height: 234px;
    margin-bottom: 10px;
}

#details-metadata .poster {
    width: 156px;
    height: 234px;
    margin-right: 10px;
    float: left;
    background-image: url('../images/placeholder.png');
    background-size: cover;
    background-position: 50%;
    border-radius: 3px;
}

#details-metadata .md-line {
    float: right;
    width: calc(100% - 166px);
    height: 40px;
    padding-bottom: 10px;
    font-size: 14px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

#details-metadata .md-line span:before {
    content: '\2022';
    font-size: 20px;
    margin: 0;
    line-height: 16px;
    padding: 0 10px 0 7px;
}

#details-metadata .md-line span:first-child:before {
    content: ''
}

#details-metadata .synopsis {
    float: right;
    width: calc(100% - 166px);
    overflow-y: scroll;
    height: 166px;
    padding-right: 10px;
    text-align: justify;
    font-size: 16px;
}

#details-metadata .md-buttons {
    float: right;
    width: calc(100% - 166px);
    height: 30px;
    padding-right: 10px;
    font-size: 13px;
}

#details-metadata .md-buttons > div {
    float: left;
    height: 30px;
    line-height: 20px;
    padding: 5px;
    margin-right: 10px;
    border-radius: 10px;
    cursor: pointer;
    transition: all .5s;
}

#details-sources,
#details-loading,
#details-spinner,
#details-next {
    height: calc(100% - 350px - 50px);
    width: 85%;
    margin: 25px auto;
}

#details-sources .query,
#details-loading .title,
#details-next .title {
    position: absolute;
    margin-top: -25px;
}

#details-sources .query {
    display: none;
}

#details-sources .query #query {
    padding: 0px 6px;
    overflow: hidden;
    width: 180px;
}

#details-sources .query .fa {
    padding: 4px 5px;
    cursor: pointer;
}

#details-sources .sources {
    width: 100%;
    height: 100%;
    margin: 0;
    overflow-x: hidden;
    overflow-y: scroll;
}

#details-sources .item {
    line-height: 40px;
    height: 40px;
    cursor: pointer;
    transition: all .5s;
}

#details-sources .item .fa {
    display: inline-block;
    padding: 0 10px;
    line-height: 40px;
    width: 32px;
    float: left;
}
/* ... */

